<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_80dp"
        android:layout_height="@dimen/_80dp"
        android:background="@drawable/bg"
        android:elevation="0.001dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:background="@drawable/circle_line_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10dp"
                android:src="@drawable/intersection"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:background="@drawable/pic_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title_fa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_path_fa"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_path"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_fa"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_ta_to_kah"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_60dp"
            android:background="@drawable/corner_rec"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.57">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtNameFa1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taj_to_kahrizak_fa"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtNameEn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taj_to_kahrizak_en"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNameFa1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_ta_to_aftab"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_60dp"
            android:background="@drawable/corner_rec"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_ta_to_kah"
            app:layout_constraintVertical_bias="0.57">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtNameFa2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taj_to_aftab_fa"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtNameEn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taj_to_aftab_en"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNameFa2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>