<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.mainFragment.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:background="@color/Nero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end">

                <com.omid.metro.ui.customViews.IranSansTextView
                    android:id="@+id/showTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_main"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ProgressBar
            android:id="@+id/PB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"

            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_no_connection"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            android:background="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/pic_no_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/no_connection"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.31" />

            <com.omid.metro.ui.customViews.IranSansTextView
                android:id="@+id/txt_fa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_Internet_fa"
                android:textColor="@color/BlueWhale"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pic_no_connection"
                app:layout_constraintVertical_bias="0.120000005" />

            <com.omid.metro.ui.customViews.IranSansTextView
                android:id="@+id/txt_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4dp"
                android:text="@string/no_internet_connection"
                android:textColor="@color/BlueWhale"
                android:textSize="@dimen/_12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_fa"
                app:layout_constraintVertical_bias="0.0" />

            <com.omid.metro.ui.customViews.IranSansButton
                android:id="@+id/btn_try"
                android:layout_width="@dimen/_180dp"
                android:layout_height="@dimen/_70dp"
                android:background="@drawable/btn_try_shape"
                android:lineSpacingExtra="@dimen/_5dp"
                android:text="@string/try_again"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_en"
                app:layout_constraintVertical_bias="0.22000003" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>
